# FTP-Media-Player

./: '  .dockerignore  .gitignore  CMakeLists.txt  Taskfile.yml
.github/workflows/: build-grpc-base-image.yaml
deploy/base/: Dockerfile
include/: FTPTextSource.h  FtpTextSource.h
protos/: Anime.proto
src/: main.cpp
src/lib/: FtpTextSource.cpp
src/lib/config/: config.cpp  config.h
src/lib/ftp_helper/: ftp_helper.cpp  ftp_helper.h
src/services/: anime_service.cpp  anime_service.h
